src/test/deca/context/invalid/wrong_type_assign.deca
{
int x = 4;
x = "erreur!";
}
// @expected_output deca:3:4: Rvalue is of type String and leftOperand is of type int
